--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "gulp-mocha": "^2.2.0",
     "gulp-sourcemaps": "^1.6.0",
     "prepend-file": "^1.3.0",
+    "random-js": "^1.0.8",
     "react": "^0.14.6",
     "react-dom": "^0.14.6",
     "rimraf": "^2.5.0",
