--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   },
   "homepage": "https://github.com/erulabs/repass#readme",
   "dependencies": {
+    "aws-sdk": "^2.2.31",
     "inquirer": "^0.11.3",
+    "mkdirp": "^0.5.1",
     "random-js": "^1.0.8"
   },
   "devDependencies": {
