--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "aws-sdk": "^2.2.31",
     "inquirer": "^0.11.3",
     "mkdirp": "^0.5.1",
-    "random-js": "^1.0.8"
+    "random-js": "^1.0.8",
+    "yub": "^0.10.12"
   },
   "devDependencies": {
     "babel": "^6.3.26",
