--- a/circle.yml
+++ b/circle.yml
@@ -3,7 +3,7 @@ machine:
   services:
     - docker
   node:
-    version: 5.4.1
+    version: stable
 
 dependencies:
   override:
@@ -15,12 +15,14 @@ test:
     - ./node_modules/.bin/gulp
     - ./node_modules/.bin/gulp finalize
     - ./test/cli.sh
-    # - docker login -e="." -u="${DOCKER_USERNAME}" -p="${DOCKER_PASSWORD}" quay.io
-    # - make pull || true
-    # - make
+    #- docker login -e="." -u="${DOCKER_USERNAME}" -p="${DOCKER_PASSWORD}" quay.io
+    #- make pull || true
+    #- make
 
 deployment:
   master:
     branch: master
     commands:
       - make push
+      #- echo -e "$NPM_USERNAME\n$NPM_PASSWORD\nfoo@foo.com" | npm login
+      #- npm publish || true
