--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "inquirer": "^0.11.3",
     "mkdirp": "^0.5.1",
     "random-js": "^1.0.8",
+    "stat-mode": "^0.2.1",
     "yub": "^0.10.12"
   },
   "devDependencies": {
