--- a/package.json
+++ b/package.json
@@ -22,30 +22,31 @@
   },
   "homepage": "https://github.com/erulabs/repass#readme",
   "dependencies": {
-    "aws-sdk": "^2.2.33",
+    "aws-sdk": "^2.2.41",
     "colors": "^1.1.2",
-    "inquirer": "^0.11.4",
+    "inquirer": "^0.12.0",
     "mkdirp": "^0.5.1",
     "random-js": "^1.0.8",
     "stat-mode": "^0.2.1",
     "yub": "^0.10.12"
   },
   "devDependencies": {
-    "babel": "^6.3.26",
-    "babel-eslint": "^5.0.0-beta6",
-    "babel-loader": "^6.2.1",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
+    "babel": "^6.5.2",
+    "babel-eslint": "^5.0.0",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
     "browser-sync": "^2.11.1",
-    "electron-prebuilt": "^0.36.7",
-    "eslint-config-standard": "^4.4.0",
-    "eslint-plugin-react": "^3.16.1",
-    "eslint-plugin-standard": "^1.3.1",
+    "electron-prebuilt": "^0.36.9",
+    "eslint-config-standard": "^5.1.0",
+    "eslint-plugin-promise": "^1.1.0",
+    "eslint-plugin-react": "^4.1.0",
+    "eslint-plugin-standard": "^1.3.2",
     "expect": "^1.14.0",
-    "gulp": "^3.9.0",
+    "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-develop-server": "^0.5.0",
-    "gulp-eslint": "^1.1.1",
+    "gulp-eslint": "^2.0.0",
     "gulp-less": "^3.0.5",
     "gulp-mocha": "^2.2.0",
     "gulp-sourcemaps": "^1.6.0",
@@ -53,7 +54,7 @@
     "random-js": "^1.0.8",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
-    "rimraf": "^2.5.1",
+    "rimraf": "^2.5.2",
     "webpack-stream": "^3.1.0"
   }
 }
