--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
   "dependencies": {
     "aws-sdk": "^2.2.41",
     "colors": "^1.1.2",
+    "gulp-nodemon": "^2.0.6",
     "inquirer": "^0.12.0",
     "mkdirp": "^0.5.1",
+    "proxy-middleware": "^0.15.0",
     "random-js": "^1.0.8",
     "stat-mode": "^0.2.1",
     "yub": "^0.10.12"
@@ -35,8 +37,11 @@
     "babel-eslint": "^5.0.0",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
+    "babel-preset-es2016": "^6.0.11",
     "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
     "browser-sync": "^2.11.1",
+    "connect-modrewrite": "^0.9.0",
     "electron-prebuilt": "^0.36.9",
     "eslint-config-standard": "^5.1.0",
     "eslint-plugin-promise": "^1.1.0",
@@ -45,11 +50,15 @@
     "expect": "^1.14.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
+    "gulp-changed": "^1.3.0",
     "gulp-develop-server": "^0.5.0",
     "gulp-eslint": "^2.0.0",
     "gulp-less": "^3.0.5",
     "gulp-mocha": "^2.2.0",
+    "gulp-preprocess": "^2.0.0",
+    "gulp-sequence": "^0.4.5",
     "gulp-sourcemaps": "^1.6.0",
+    "gutil": "^1.6.4",
     "prepend-file": "^1.3.0",
     "random-js": "^1.0.8",
     "react": "^0.14.7",
