--- a/circle.yml
+++ b/circle.yml
@@ -1,7 +1,4 @@
-
 machine:
-  services:
-    - docker
   node:
     version: stable
 
@@ -11,18 +8,7 @@ dependencies:
 
 test:
   override:
-    - ./node_modules/.bin/gulp test
-    - ./node_modules/.bin/gulp
-    - ./node_modules/.bin/gulp finalize
+    - npm run build
+    - npm run test
+    - npm run finalize
     - ./test/cli.sh
-    #- docker login -e="." -u="${DOCKER_USERNAME}" -p="${DOCKER_PASSWORD}" quay.io
-    #- make pull || true
-    #- make
-
-deployment:
-  master:
-    branch: master
-    commands:
-      - make push
-      #- echo -e "$NPM_USERNAME\n$NPM_PASSWORD\nfoo@foo.com" | npm login
-      #- npm publish || true
