--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "eslint-plugin-promise": "^1.1.0",
     "eslint-plugin-react": "^4.1.0",
     "eslint-plugin-standard": "^1.3.2",
+    "estraverse-fb": "^1.3.1",
     "expect": "^1.14.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
