--- a/package.json
+++ b/package.json
@@ -58,11 +58,13 @@
     "gulp-eslint": "^2.0.0",
     "gulp-less": "^3.0.5",
     "gulp-mocha": "^2.2.0",
+    "gulp-nodemon": "^2.0.6",
     "gulp-preprocess": "^2.0.0",
     "gulp-sequence": "^0.4.5",
     "gulp-sourcemaps": "^1.6.0",
     "gutil": "^1.6.4",
     "prepend-file": "^1.3.0",
+    "proxy-middleware": "^0.15.0",
     "random-js": "^1.0.8",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
