--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "repass",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "A password manager that doesn't suck",
-  "main": "_build/client/app.js",
   "scripts": {
     "cli": "node ./_build/cli",
     "dev": "./node_modules/.bin/gulp watch",
@@ -11,7 +10,7 @@
     "build": "./node_modules/.bin/gulp",
     "finalize": "./node_modules/.bin/gulp finalize"
   },
-  "bin": "_build/cli/index.js",
+  "bin": "build/cli/index.js",
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com/erulabs/repass.git"
@@ -24,10 +23,10 @@
   },
   "homepage": "https://github.com/erulabs/repass#readme",
   "dependencies": {
-    "aws-sdk": "^2.2.41",
+    "aws-sdk": "^2.3.3",
     "colors": "^1.1.2",
     "gulp-nodemon": "^2.0.6",
-    "inquirer": "^0.12.0",
+    "inquirer": "^1.0.2",
     "mkdirp": "^0.5.1",
     "proxy-middleware": "^0.15.0",
     "random-js": "^1.0.8",
@@ -36,25 +35,25 @@
   },
   "devDependencies": {
     "babel": "^6.5.2",
-    "babel-eslint": "^5.0.0",
+    "babel-eslint": "^6.0.2",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-es2016": "^6.0.11",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
-    "browser-sync": "^2.11.1",
+    "browser-sync": "^2.12.3",
     "connect-modrewrite": "^0.9.0",
-    "electron-prebuilt": "^0.36.9",
+    "electron-prebuilt": "^0.37.6",
     "eslint-config-standard": "^5.1.0",
     "eslint-plugin-promise": "^1.1.0",
-    "eslint-plugin-react": "^4.1.0",
+    "eslint-plugin-react": "^5.0.1",
     "eslint-plugin-standard": "^1.3.2",
     "estraverse-fb": "^1.3.1",
-    "expect": "^1.14.0",
+    "expect": "^1.18.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^6.1.2",
     "gulp-changed": "^1.3.0",
-    "gulp-develop-server": "^0.5.0",
+    "gulp-develop-server": "^0.5.1",
     "gulp-eslint": "^2.0.0",
     "gulp-less": "^3.0.5",
     "gulp-mocha": "^2.2.0",
@@ -66,8 +65,8 @@
     "prepend-file": "^1.3.0",
     "proxy-middleware": "^0.15.0",
     "random-js": "^1.0.8",
-    "react": "^0.14.7",
-    "react-dom": "^0.14.7",
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1",
     "rimraf": "^2.5.2",
     "webpack-stream": "^3.1.0"
   }
