--- a/package.json
+++ b/package.json
@@ -23,28 +23,28 @@
   },
   "homepage": "https://github.com/erulabs/repass#readme",
   "dependencies": {
-    "aws-sdk": "^2.3.3",
+    "aws-sdk": "^2.3.6",
     "colors": "^1.1.2",
-    "gulp-nodemon": "^2.0.6",
+    "faker": "^3.1.0",
     "inquirer": "^1.0.2",
     "mkdirp": "^0.5.1",
-    "proxy-middleware": "^0.15.0",
     "random-js": "^1.0.8",
     "stat-mode": "^0.2.1",
+    "yargs": "^4.6.0",
     "yub": "^0.10.12"
   },
   "devDependencies": {
     "babel": "^6.5.2",
-    "babel-eslint": "^6.0.2",
+    "babel-eslint": "^6.0.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-es2016": "^6.0.11",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "^6.5.0",
-    "browser-sync": "^2.12.3",
+    "browser-sync": "^2.12.5",
     "connect-modrewrite": "^0.9.0",
-    "electron-prebuilt": "^0.37.6",
-    "eslint-config-standard": "^5.1.0",
+    "electron-prebuilt": "^0.37.7",
+    "eslint-config-standard": "^5.2.0",
     "eslint-plugin-promise": "^1.1.0",
     "eslint-plugin-react": "^5.0.1",
     "eslint-plugin-standard": "^1.3.2",
@@ -60,7 +60,7 @@
     "gulp-nodemon": "^2.0.6",
     "gulp-preprocess": "^2.0.0",
     "gulp-sequence": "^0.4.5",
-    "gulp-sourcemaps": "^1.6.0",
+    "gulp-sourcemaps": "^2.0.0-alpha",
     "gutil": "^1.6.4",
     "prepend-file": "^1.3.0",
     "proxy-middleware": "^0.15.0",
@@ -68,6 +68,6 @@
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
     "rimraf": "^2.5.2",
-    "webpack-stream": "^3.1.0"
+    "webpack-stream": "^3.2.0"
   }
 }
